# ai-engineering-practice

./: .gitignore  AGENTS.md  README.md  project.setup.md  pyproject.toml  suggested-order.md
.agents/skills/generate-challenge/: SKILL.md
.agents/skills/review-solution/: SKILL.md
.agents/skills/save-progress/: SKILL.md
challenges/: 001_raw_chunking.py
docs/: AI.md  progress.md  tool-use.md
example-prompts/: 01-prompt-generate.md  01-prompt-review.md
src/ai_engineering_practice/: __init__.py
tests/: test_001_raw_chunking.py
