[project]
name = "ai-engineering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zsolt Almasi", email = "zsoloyolo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "deepeval>=4.0.5",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "llama-index>=0.14.22",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rich>=14.3.4",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
ai-engineering-practice = "ai_engineering_practice:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
